<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a7a7a7"
    tools:context="com.example.riaditelka.myapplication.Matematika_KvadratickeRovnice">

    <TextView
        android:id="@+id/txt_KvadratickeRovnice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="15dp"
        android:padding="0dp"
        android:text="Kvadratické rovnice"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="#002EB8"
        android:elevation="10dp"
        android:padding="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/Matematika_KvadratickeRovnice_Dv0"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#a7a7a7"
        android:padding="12dp"
        android:text="@string/d_0_x_x_b_d_2a"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/Matematika_KvadratickeRovnice_Diskriminant"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#a7a7a7"
        android:padding="12dp"
        android:text="@string/d_b_4ac"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />


    <TextView
        android:id="@+id/Matematika_KvadratickeRovnice_Drovne0"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#a7a7a7"
        android:padding="12dp"
        android:text="@string/d_0_x_b_2a"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/Matematika_KvadratickeRovnice_Dmensie0"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#a7a7a7"
        android:padding="12dp"
        android:text="@string/d_0_x_prazdnamnozina"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/txt_Matematika_KvadratickeRovnice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:text="Matematika > Kvadratické rovnice >"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />
</android.support.constraint.ConstraintLayout>
