<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a7a7a7"
    tools:context="com.example.riaditelka.myapplication.Matematika_Vyrazy">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="15dp"
        app:srcCompat="@mipmap/ic_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/txt_Vyrazy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="15dp"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:text="VÝRAZY"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"  />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="#002EB8"
        android:elevation="10dp"
        android:padding="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/txtMatematika_Vyrazy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:text="Matematika > Výrazy >"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/Matematika_Vyrazy_AplusB2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#a7a7a7"
        android:padding="12dp"
        android:text="@string/a_b_a_plus_2ab_b"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/Matematika_Vyrazy_AminusB2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#a7a7a7"
        android:padding="12dp"
        android:text="@string/a_b_a_minus_2ab_b"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <TextView
        android:id="@+id/Matematika_Vyrazy_A2B2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#a7a7a7"
        android:padding="12dp"
        android:text="@string/a_b_a_b_a_b"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />


</android.support.constraint.ConstraintLayout>
